# calendal-document-management-app-with-codex-ai

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
docs/superpowers/plans/: 2026-06-28-calendar-app-mvp-foundation.md  2026-06-28-schedule-add-calendar.md  2026-06-29-schedule-edit-delete-drag.md
docs/superpowers/specs/: 2026-06-28-calendar-app-design.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: App.test.tsx  App.tsx  routes.tsx
src/app/providers/: AppDataProvider.test.tsx  AppDataProvider.tsx
src/features/calendar/: CalendarPage.tsx
src/features/documents/: DocumentsPage.tsx
src/features/schedules/: ScheduleModal.tsx
src/features/settings/: SettingsPage.tsx  settingsOptions.test.ts  settingsOptions.ts
src/features/statistics/: StatisticsPage.tsx
src/features/tasks/: TaskModal.tsx  TasksPage.tsx
src/features/today/: TodayPage.tsx  todaySelectors.test.ts  todaySelectors.ts
src/platform/web/: isWebRuntime.ts
src/shared/components/: AppShell.tsx  EmptyState.tsx  SectionCard.tsx  StatCard.tsx
src/shared/dates/: dateUtils.test.ts  dateUtils.ts
src/shared/design-system/: global.css  theme.css
src/shared/storage/: localStorageAdapter.test.ts  localStorageAdapter.ts  repositories.test.ts  repositories.ts  storageKeys.ts
src/shared/types/: domain.ts
src/test/: smoke.test.ts  testStorage.ts
