[package]
name = "calendar-knowledge-app"
version = "0.1.0"
description = "Local-first calendar knowledge app"
authors = ["Calendar Knowledge App"]
edition = "2021"

[lib]
name = "calendar_knowledge_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
